@@ -23,12 +23,24 @@
 
 # The java implementation to use.  Java 1.6 required.
 # export JAVA_HOME=/usr/java/jdk1.6.0/
+export JAVA_HOME="/System/Library/Frameworks/JavaVM.framework/Versions/1.6/Home/"
 
 # Extra Java CLASSPATH elements.  Optional.
 # export HBASE_CLASSPATH=
 
 # The maximum amount of heap to use, in MB. Default is 1000.
 # export HBASE_HEAPSIZE=1000
+
+# Heap to give regionserver. Default is HBASE_HEAPSIZE.
+# export HBASE_REGIONSERVER_OPTS=${HBASE_HEAPSIZE}
+
+# Heap to give master. Default is HBASE_HEAPSIZE.
+# export HBASE_MASTER_OPTS=${HBASE_HEAPSIZE}
+export HBASE_MASTER_OPTS="-Xmx513m -Xms513m"
+
+# Heap to give master. Default is HBASE_HEAPSIZE.
+# export HBASE_QUORUMPEER_OPTS=${HBASE_HEAPSIZE}
+export HBASE_QUORUMPEER_OPTS="-Xmx514m -Xms514m"
 
 # Extra Java runtime options.
 # Below are what we set by default.  May only work with SUN JVM.
