@@ -332,7 +332,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * Servlet implementation class for hbase REST interface. Presumes container  * ensures single thread through here at any one time (Usually the default  * configuration). In other words, code is not written thread-safe.  *<p>  * This servlet has explicit dependency on Jetty server; it uses the jetty  * implementation of MultipartResponse.  *   *<p>  * TODO:  *<ul>  *<li>multipart/related response is not correct; the servlet setContentType is  * broken. I am unable to add parameters such as boundary or start to  * multipart/related. They get stripped.</li>  *<li>Currently creating a scanner, need to specify a column. Need to make it  * so the HTable instance has current table's metadata to-hand so easy to find  * the list of all column families so can make up list of columns if none  * specified.</li>  *<li>Minor items are we are decoding URLs in places where probably already  * done and how to timeout scanners that are in the scanner list.</li>  *</ul>  *   * @see<a href="http://wiki.apache.org/lucene-hadoop/Hbase/HbaseRest">Hbase  *      REST Specification</a>  */
+comment|/**  * Servlet implementation class for hbase REST interface. Presumes container  * ensures single thread through here at any one time (Usually the default  * configuration). In other words, code is not written thread-safe.  *<p>  * This servlet has explicit dependency on Jetty server; it uses the jetty  * implementation of MultipartResponse.  *   *<p>  * TODO:  *<ul>  *<li>multipart/related response is not correct; the servlet setContentType is  * broken. I am unable to add parameters such as boundary or start to  * multipart/related. They get stripped.</li>  *<li>Currently creating a scanner, need to specify a column. Need to make it  * so the HTable instance has current table's metadata to-hand so easy to find  * the list of all column families so can make up list of columns if none  * specified.</li>  *<li>Minor items are we are decoding URLs in places where probably already  * done and how to timeout scanners that are in the scanner list.</li>  *</ul>  *   * @see<a href="http://wiki.apache.org/lucene-hadoop/Hbase/HbaseRest">Hbase  *      REST Specification</a>  * @deprecated Use the {@link org.apache.hadoop.hbase.stargate}  hbase contrib instead.  */
 end_comment
 
 begin_class
