@@ -28,6 +28,8 @@ REST</a> service.
 This directory contains a REST service implementation for an Hbase RPC
 service.
 
+DEPRECATED since 0.20.0; use the <a href="../stargate/package-summary.html">stargate contrib</a> instead.
+
 <h2><a name="description">Description</a></h2>
 <p>
 By default, an instance of the REST servlet runs in the master UI; just browse
